[package]
name = "vms"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
serde_json = "1.0.139"
jsonwebtokens = "1.2.0"
base64 = "0.22.1"
openssl = "0.10.71"
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }



